added profile page and edit profile functionality

--- a/views/partials/home-main.ejs
+++ b/views/partials/home-main.ejs
@@ -61,5 +61,5 @@
     <img src="/images/hero-sec4.jpg" width="50%" class="rounded-pill">
     <br>
     <p class="text-center">Sign up for a FREE account today and start your own adventure in Tales of Swiftfell</p>
-    <a href="#" class="btn btn-primary" style="width: 10vw;">Sign Up</a>
+    <a href="/user/signup" class="btn btn-primary" style="width: 10vw;">Sign Up</a>
 </div>
