--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -28,20 +28,20 @@
         <ul class="navbar-nav ml-auto">
             <% if (!user) { %>
             <li class="nav-item">
-                <a href="/users/signup" class='nav-link'>Sign up <span class='sr-only'>(current)</span></a>
+                <a href="/user/signup" class='nav-link'>Sign up <span class='sr-only'>(current)</span></a>
             </li>
             <li class="nav-item">
-                <a href="/users/signin" class='nav-link'>Sign in </a>
+                <a href="/user/signin" class='nav-link'>Sign in </a>
             </li>
             <% } else {%>
 
             <li class="nav-item">
-                <a href="/api/users/profile" class='nav-link'>Logged in as <span
+                <a href="/user/profile" class='nav-link'>Logged in as <span
                         style="color: orange"><%= user.profile.name%>
                     </span>
                 </a>
             </li>
-            <a href="/users/logout" class='nav-link'>Log out</a>
+            <a href="/user/logout" class='nav-link'>Log out</a>
 
             <% } %>
         </ul>
