--- a/views/user/signin.ejs
+++ b/views/user/signin.ejs
@@ -17,7 +17,7 @@
     </div>
     <% } %>
 
-    <form class="form-signin" method="POST" action="/users/signin">
+    <form class="form-signin" method="POST" action="/user/signin">
 
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
         <label for="inputEmail" class="sr-only">Email address</label>
