added game menu page once a user is logged in

--- a/public/stylesheets/profile-style.css
+++ b/public/stylesheets/profile-style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: linear-gradient(to right, rgb(160, 134, 85), white);
+    background-image: linear-gradient(to right, #724a22, white);
 }
 
 .emp-profile{
