--- a/views/game/main.ejs
+++ b/views/game/main.ejs
@@ -18,7 +18,7 @@
                 <br>
                 <a href="#">Read game play instructions</a>
                 <br>
-                <a href="#">Post on message board</a>
+                <a href="/game/messageBoard">Post on message board</a>
                 <br>
                 <a href="/user/profile">Edit profile</a>
                 <br>
