added instructions page placeholder and route

--- a/views/game/main.ejs
+++ b/views/game/main.ejs
@@ -16,7 +16,7 @@
                 <img src="/images/game-menu-text.png">
                 <br>
                 <br>
-                <a href="#">Read game play instructions</a>
+                <a href="/game/instructions">Read game play instructions</a>
                 <br>
                 <a href="/game/messageBoard">Post on message board</a>
                 <br>
