first paragraph of instructions.ejs file added

--- a/views/game/instructions.ejs
+++ b/views/game/instructions.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <% include ../partials/head %>
+<% include ../partials/scripts %>
 <link rel="stylesheet" href="/stylesheets/game-main.css">
 
 <body>
@@ -9,7 +10,11 @@
 
     <br>
     <div>
-        <h1 class="text-center">Coming Soon</h1>
+        <h1 class="text-center" style="font-family: 'Courgette', cursive;"><u>Gameplay Instructions</u></h1>
+    </div>
+    <br>
+    <div class="col text-center px-5">
+        <p class="project-font">Tales from Swiftfell is a fantasy role-playing game built in the style of a classic 16bit console video game. TFS uses the latest RPG Maker MV software, a development tool which utilizes Javascript that is simple enough for a child, but powerful enough for a developer. TFS is designed to run directly from your web browser, meaning no downloads, no installations, just adventure!</p>
     </div>
     <br>
     <div class="text-center">
