--- a/public/stylesheets/game-main.css
+++ b/public/stylesheets/game-main.css
@@ -4,6 +4,12 @@ body {
     background-repeat: no-repeat;
 }
 
+.project-font {
+    color: black;
+    font-family: 'Courgette', cursive;
+    font-size: 1.4em;
+}
+
 a:hover {
     text-decoration: none;
 }
