--- a/views/game/main.ejs
+++ b/views/game/main.ejs
@@ -23,7 +23,7 @@
                 <a href="/user/profile">Edit profile</a>
                 <br>
                 <br>
-                <a href="/game/launch" class="btn btn-primary btn-lg">LAUNCH GAME</button>
+                <a href="/game/launch" class="btn btn-primary btn-lg">LAUNCH GAME</a>
             </div>
         </div>
     </div>
