added better stylization to signin and signup ejs files

--- a/views/partials/home-main.ejs
+++ b/views/partials/home-main.ejs
@@ -12,7 +12,7 @@
 </div>
 
 <div id="appSec3">
-    <div id="left-sec3">
+    <div id="left-sec3" class="px-3">
         <p class="text-center main-font">Team up with other Heros to do battle with powerful creatures, enchanted beats, evil scoundrels, and ancient beings.</p>
     </div>
     <div id="right-sec3">
