adjust opacity on signin and signup images

--- a/views/user/signin.ejs
+++ b/views/user/signin.ejs
@@ -3,7 +3,7 @@
 
 <% include ../partials/head %>
 
-<body class=" text-center" style="background-image: radial-gradient(white, #F5F5F5);">
+<body class=" text-center" style="background-image: radial-gradient(white, #F5F5F5); opacity: 0.85;">
     <link rel="stylesheet" href="/stylesheets/signin.css">
     <% include ../partials/nav %>
     <img src="/images/scroll.jpg" style="position: absolute; justify-self: center; align-self: center; z-index: -1;" height="100%">
