--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -6,7 +6,7 @@
 
 <body class=" text-center" style="background-image: radial-gradient(white, #F5F5F5);">
     <% include ../partials/nav %>
-    <img src="/images/scroll.jpg" style="justify-self: center; align-self: center; z-index: -1; position: absolute;" height="100%" />
+    <img src="/images/scroll.jpg" style="justify-self: center; align-self: center; z-index: -1; position: absolute; opacity: 0.85;" height="100%" />
     <br>
 
     <form class="form-signin" method="POST" action="/user/signup" width="50%">
