moddified nav bar styilzation

--- a/views/game/instructions.ejs
+++ b/views/game/instructions.ejs
@@ -13,10 +13,46 @@
         <h1 class="text-center" style="font-family: 'Courgette', cursive;"><u>Gameplay Instructions</u></h1>
     </div>
     <br>
-    <div class="col text-center px-5">
+    <div class="col text-center">
         <p class="project-font">Tales from Swiftfell is a fantasy role-playing game built in the style of a classic 16bit console video game. TFS uses the latest RPG Maker MV software, a development tool which utilizes Javascript that is simple enough for a child, but powerful enough for a developer. TFS is designed to run directly from your web browser, meaning no downloads, no installations, just adventure!</p>
     </div>
+    <br>
+    <br>
     
+    <ul class="list-unstyled" style="padding-left: 8em; padding-right: 15em;">
+        <li class="media">
+            <img class="align-self-center mr-3" src="/images/game-controller.png" width="5%" alt="Generic placeholder image">
+            <div class="media-body">
+                <h5 class="mt-0 mb-1"><u>Basic Controlls</u></h5>
+                <b>Directional Keys:</b> Move your character up, down, left, and right. By default, your character will move at walking speed.<br>
+                <b>A:</b> General action key. Press A to talk to people, interact with the environment, advance text dialogue, and confirm menu selections.<br>
+                <b>X:</b> Cancel or alternate action key. Press X to cancel a menu selection or to pull up the character menu when outside of battle.<br>
+                <b>Shift (Hold):</b> Dash. Hold down the Shift key to move at Dash speed.<br>
+            </div>
+        </li>
+        <br>
+        <br>
+        
+        <li class="media my-4">
+            <img class="mr-3" src="..." alt="Generic placeholder image">
+            <div class="media-body">
+                <h5 class="mt-0 mb-1">List-based media object</h5>
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
+                vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec
+                lacinia congue felis in faucibus.
+            </div>
+        </li>
+        <li class="media">
+            <img class="mr-3" src="..." alt="Generic placeholder image">
+            <div class="media-body">
+                <h5 class="mt-0 mb-1">List-based media object</h5>
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
+                vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec
+                lacinia congue felis in faucibus.
+            </div>
+        </li>
+    </ul>
+
     <br>
     <div class="text-center">
         <a href="/home" class="btn btn-primary btn-lg">Back to Game Menu</a>
