--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -19,7 +19,7 @@
 
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav mx-auto align-middle">
-            <span style="color: white; font-family: fantasy; font-size: 1.2em">Tales from Swiftfell</span>
+            <span style="color: white; font-family: fantasy; font-size: 1.2em"><b>Tales from Swiftfell</b></span>
         </ul>
     </div>
 
