message board main page template added

--- a/views/game/messageBoard.ejs
+++ b/views/game/messageBoard.ejs
@@ -3,18 +3,49 @@
 
 <% include ../partials/head %>
 <link rel="stylesheet" href="/stylesheets/game-main.css">
+<link rel="stylesheet" href="/stylesheets/message-board.css">
 
 <body>
     <% include ../partials/nav %>
+    <br>
+        <div class="jumbotron mx-auto" style="width: 90%;">
+            <h1 class="text-center"><b>Message Board</b></h1> 
+        </div>
+        <br>
+        <div id="board-main">
+            <div class="msg-icon">
+                <i class="far fa-folder fa-3x"></i>
+            </div>
+
+            <div class="category-area">
+                <p><b>Category Name</b></p>
+                <p>Description of contents</p>
+            </div>
+
+            <div class="topics-num-area">
+                <p><b>(num)</b></p>
+                <p>Topics</p>
+            </div>
+
+            <div class="posts-num-area">
+                <p><b>(num)</b></p>
+                <p>Posts</p>
+            </div>
+
+            <div class="last-posting-area">
+                <p>Name of last post</p>
+                <p>by (user), (time stamp)</p>
+            </div>
+
+    
+        </div>
+        <br><br><br><br><br>
+        <div class="text-center">
+            <a href="/home" class="btn btn-primary btn-lg">Back to Menu</a>
+        </div>
     
 </body>
-<br>
-    <div>
-        <h1 class="text-center">COMING SOON</h1>
-    </div>
-    <br>
-    <div class="text-center">
-        <a href="/home" class="btn btn-primary btn-lg">Back to Menu</a>
-    </div>
+
+    
 
 </html>
