message board main page can be dynamically created based on forums collection in DB

--- a/public/stylesheets/message-board.css
+++ b/public/stylesheets/message-board.css
@@ -3,6 +3,10 @@ h1 {
     text-shadow: 3px 2px gray;
 }
 
+a, a:visited .category-area {
+    color: black;
+}
+
 .jumbotron {
     background-image: linear-gradient(to right, rgb(165, 91, 42), rgb(207, 160, 129));
 }
