--- a/views/partials/home-main.ejs
+++ b/views/partials/home-main.ejs
@@ -6,7 +6,6 @@
         <img src="/images/title-img.jpg" class="img-fluid rounded-circle">
     </div>
     <div id="right-sec1">
-        <br>
         <img src="/images/logo-text.png" width="95%">
     </div>
 </div>
@@ -60,6 +59,6 @@
 <div id="appSec4" class="main-font">
     <img src="/images/hero-sec4.jpg" width="50%" class="rounded-pill">
     <br>
-    <p class="text-center">Sign up for a FREE account today and start your own adventure in Tales of Swiftfell</p>
+    <p class="text-center">Sign up for a FREE account today and start your own adventure in Tales from Swiftfell</p>
     <a href="/user/signup" class="btn btn-primary" style="width: 10vw;">Sign Up</a>
 </div>
