--- a/public/stylesheets/mb-category.css
+++ b/public/stylesheets/mb-category.css
@@ -33,8 +33,22 @@ a, a:visited .category-area {
     display: flex;
     flex-direction: column;
     height: 15vh;
-    width: 85vw;
+    width: 65vw;
     background-color: rgb(207, 160, 129);
     padding: 0 0 0 2%;
     justify-content: center;
+}
+
+.info-area {
+    display: flex;
+    flex-direction: column;
+    height: 15vh;
+    width: 20vw;
+    background-color: rgb(207, 160, 129);
+    padding: 0 0 0 2%;
+    justify-content: center;
+}
+
+.author-color {
+    color: rgb(238, 238, 238);
 }
