--- a/views/game/main.ejs
+++ b/views/game/main.ejs
@@ -7,7 +7,17 @@
 
 <body>
     <% include ../partials/nav %>
+
+    
     <div id="app">
+        <% for (let err of errors) { %>
+            <div class="alert alert-danger alert-dismissible fade show text-center mx-auto mt-5" style="width: 40%; height: 8vh;" role="alert">
+                <%= err %>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <% } %>
         <div id="main">
             <div id="main-left">
                 <img src="/images/party-group.jpg" width="75%">
