--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -5,9 +5,9 @@
 
 <link rel="stylesheet" href="/stylesheets/signin.css">                                                                                             
 
-<body class=" text-center" style="background-image: radial-gradient(white, #F5F5F5);">
+<body class=" text-center" style="background-image: radial-gradient(white, rgb(226, 186, 134));">
     <% include ../partials/nav %>
-    <img src="/images/scroll.jpg" style="justify-self: center; align-self: center; z-index: -1; position: absolute; opacity: 0.85;" height="100%" />
+    <img src="/images/scroll.png" style="justify-self: center; align-self: center; z-index: -1; position: absolute;" height="100%" />
     <br>
 
     <form class="form-signin" method="POST" action="/user/signup" width="50%">
