update password recovery page stylization

--- a/views/user/password-recovery.ejs
+++ b/views/user/password-recovery.ejs
@@ -8,6 +8,17 @@
     <p></p>
     <div class="main">
         
+        <div id="form-area">
+            <form class="form-signin" method="POST" action="/user/signin">
+                <label for="inputEmail" class="sr-only">Email address</label>
+                <input type="text" id="inputEmail" class="form-control" size="50" placeholder="Email address" name="email">
+                <br>
+                <div class="text-center">
+                    <button class="btn btn-lg btn-primary" type="submit" style="font-family: fantasy;">Recover Password</button>
+                </div>
+                <br>
+            </form>
+        </div> 
     </div>
 
 </body>
