--- a/public/stylesheets/password-recovery.css
+++ b/public/stylesheets/password-recovery.css
@@ -5,9 +5,25 @@ body {
 .main {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     height: 91vh;
     background-image: url('/images/messenger2.jpg');
     background-position: center;
     background-repeat: no-repeat;
     opacity: 0.5;
+}
+
+#form-area {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+    opacity: 1;
+    height: 25vh;
+    width: 35vw;
+    background-color: gray;
+    border: 2px solid rgba(39, 39, 39, 0.87);
+    border-radius: 7%;
 }
