password recovery feature created and implamented

--- a/public/stylesheets/password-recovery.css
+++ b/public/stylesheets/password-recovery.css
@@ -11,7 +11,7 @@ body {
     background-image: url('/images/messenger2.jpg');
     background-position: center;
     background-repeat: no-repeat;
-    opacity: 0.5;
+    opacity: 0.8;
 }
 
 #form-area {
@@ -19,11 +19,13 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    z-index: 2;
-    opacity: 1;
     height: 25vh;
     width: 35vw;
     background-color: gray;
     border: 2px solid rgba(39, 39, 39, 0.87);
-    border-radius: 7%;
+    border-radius: 10px;
+}
+
+.btn {
+    border: 1px solid black;
 }
