--- a/views/user/password-recovery.ejs
+++ b/views/user/password-recovery.ejs
@@ -7,11 +7,31 @@
     <% include ../partials/nav %>
     <p></p>
     <div class="main">
+
+        <% for (let err of errors) { %>
+        
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <%= err%>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <% } %>
+
+        <% for (let s of success) { %>
+        
+        <div class="alert alert-primary alert-dismissible fade show" role="alert">
+            <%= s%>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <% } %>
         
         <div id="form-area">
-            <form class="form-signin" method="POST" action="/user/signin">
+            <form class="form-signin" method="POST" action="/user/passwordrecovery">
                 <label for="inputEmail" class="sr-only">Email address</label>
-                <input type="text" id="inputEmail" class="form-control" size="50" placeholder="Email address" name="email">
+                <input type="text" id="inputEmail" name="email" class="form-control" size="50" placeholder="Email address" name="email">
                 <br>
                 <div class="text-center">
                     <button class="btn btn-lg btn-primary" type="submit" style="font-family: fantasy;">Recover Password</button>
