--- a/views/user/signin.ejs
+++ b/views/user/signin.ejs
@@ -18,7 +18,18 @@
     </div>
     <% } %>
 
+
     <form class="form-signin" method="POST" action="/user/signin">
+
+        <% if (success.length > 1) { %>
+        
+        <div class="alert alert-primary alert-dismissible fade show" role="alert">
+            <%= success%>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <% } %>
 
         <!-- <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1> -->
         <label for="inputEmail" class="sr-only">Email address</label>
