--- a/views/game/main.ejs
+++ b/views/game/main.ejs
@@ -28,7 +28,7 @@
                 <br>
                 <a href="/game/instructions">Read game play instructions</a>
                 <br>
-                <a href="/game/messageBoard">Post on message board</a>
+                <a href="/messageBoard">Post on message board</a>
                 <br>
                 <a href="/user/profile">Edit profile</a>
                 <br>
