button opens new tab to launch game

--- a/views/game/main.ejs
+++ b/views/game/main.ejs
@@ -33,9 +33,16 @@
                 <a href="/user/profile">Edit profile</a>
                 <br>
                 <br>
-                <a href="/game/launch" class="btn btn-primary btn-lg">LAUNCH GAME</a>
+                <button onclick="" class="btn btn-primary btn-lg">LAUNCH GAME</a>
             </div>
         </div>
     </div>
+
+
+    <script>
+    function launchGame() {
+        window.open('/game/launch')
+    }
+    </script>
 </body>
 </html>
