button opens new tab to launch game

--- a/views/game/main.ejs
+++ b/views/game/main.ejs
@@ -33,7 +33,7 @@
                 <a href="/user/profile">Edit profile</a>
                 <br>
                 <br>
-                <button onclick="" class="btn btn-primary btn-lg">LAUNCH GAME</a>
+                <button onclick="launchGame()" class="btn btn-primary btn-lg">LAUNCH GAME</a>
             </div>
         </div>
     </div>
