--- a/views/game/message-board.ejs
+++ b/views/game/message-board.ejs
@@ -7,7 +7,7 @@
     <% include ../partials/nav %>
     <p></p>
     
-    <p><iframe class="forum-style" border="0" src="http://tfs-forum.forumotion.com" width="712"></iframe></p>
+    <p><iframe class="forum-style" src="tfs-forum.forumotion.com"></iframe></p>
 
 
 </body>
