--- a/views/game/message-board.ejs
+++ b/views/game/message-board.ejs
@@ -21,7 +21,7 @@
     <% include ../partials/nav %>
     <p></p>
     
-    <p><iframe class="forum-style" src="https://tfs-forum.forumotion.com"></iframe></p>
+    <p><iframe class="forum-style" src="http://tfs-forum.forumotion.com"></iframe></p>
 
 
 </body>
