fixed missing closing tags

--- a/views/game/main.ejs
+++ b/views/game/main.ejs
@@ -28,12 +28,12 @@
                 <br>
                 <a href="/game/instructions">Read game play instructions</a>
                 <br>
-                <button onclick="loadMessageBoard()">Post on message board</a>
+                <button onclick="loadMessageBoard()">Post on message board</button>
                 <br>
                 <a href="/user/profile">Edit profile</a>
                 <br>
                 <br>
-                <button onclick="launchGame()" class="btn btn-primary btn-lg">LAUNCH GAME</a>
+                <button onclick="launchGame()" class="btn btn-primary btn-lg">LAUNCH GAME</button>
             </div>
         </div>
     </div>
