fixed missing closing tags

--- a/views/game/main.ejs
+++ b/views/game/main.ejs
@@ -28,7 +28,7 @@
                 <br>
                 <a href="/game/instructions">Read game play instructions</a>
                 <br>
-                <button onclick="loadMessageBoard()">Post on message board</button>
+                <a onclick="loadMessageBoard()">Post on message board</a>
                 <br>
                 <a href="/user/profile">Edit profile</a>
                 <br>
