Fixed typo on instructions page

--- a/views/game/instructions.ejs
+++ b/views/game/instructions.ejs
@@ -23,7 +23,7 @@
             <div class="media-body">
                 <h5 class="mt-0 mb-1"><u>Basic Controlls</u></h5>
                 <b>Directional Keys:</b> Move your character up, down, left, and right. By default, your character will move at walking speed.<br>
-                <b>Z:</b> General action key. Press A to talk to people, interact with the environment, advance text dialogue, and confirm menu selections.<br>
+                <b>Z:</b> General action key. Press Z to talk to people, interact with the environment, advance text dialogue, and confirm menu selections.<br>
                 <b>X:</b> Cancel or alternate action key. Press X to cancel a menu selection or to pull up the character menu when outside of battle.<br>
                 <b>Shift (Hold):</b> Dash. Hold down the Shift key to move at Dash speed.<br>
             </div>
