updating password recovery routing

--- a/views/game/instructions.ejs
+++ b/views/game/instructions.ejs
@@ -30,25 +30,21 @@
         </li>
         <br>
         <br>
-        
-        <li class="media my-4">
-            <img class="mr-3" src="..." alt="Generic placeholder image">
-            <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
-                vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec
-                lacinia congue felis in faucibus.
-            </div>
-        </li>
+
         <li class="media">
-            <img class="mr-3" src="..." alt="Generic placeholder image">
+            <img class="align-self-center mr-3" src="/images/sword-icon.png" width="5%" alt="Generic placeholder image">
             <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
-                vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec
-                lacinia congue felis in faucibus.
+                <h5 class="mt-0 mb-1"><u>Combat</u></h5>
+                <p>TFS utilizes a turn-based, side-view combat system. A character's agility stat is used to determine who will act first during any round of combat. When engaged in battle, a hero has several options...</p>
+                <ul>
+                    <li><b>Fight: </b>A hero will attack with their equipped weapon, dealing damage to the enemy selected.</li>
+                </ul>
             </div>
         </li>
+        <br>
+        <br>
+        
+        
     </ul>
 
     <br>
